Config for local laptop

--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -1,7 +1,7 @@
 ---
 ansible-navigator:
   execution-environment:
-    image: localhost/ee-infoblox:v1.0
+    image: quay.io/cnorvill/ee-infoblox:v1.0
     pull:
       policy: missing
   playbook-artifact:
