--- a/02_infoblox_create_network.yml
+++ b/02_infoblox_create_network.yml
@@ -1,10 +1,10 @@
 ---
 - name: A playbook to create a network for a specified Networkview in Infoblox / NIOS
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: yes
   vars: 
-    networkviewtocreate: The-Rick-James-Network
+    networkview: The-Rick-James-Network
     network4tocreate: 192.168.11.0/24
     network6tocreate: fe81::/64
   vars_files:
@@ -14,25 +14,25 @@
 
     - name: "Fetch the Network Object {{ networkviewtocreate }}"
       set_fact: 
-        networkviews: "{{ lookup('infoblox.nios_modules.nios_lookup', 'networkview', filter={'name': networkviewtocreate}, 
+        networkviews: "{{ lookup('infoblox.nios_modules.nios_lookup', 'networkview', filter={'name': networkview}, 
                           provider=nios_provider) }}"
 
     - name: check the networkviews
       debug:
         var: networkviews
 
-    - name: "Create an ipv4 network {{ network4tocreate }} under the networkview {{ networkviewtocreate }}"
+    - name: "Create an ipv4 network {{ network4tocreate }} under the networkview {{ networkview }}"
       infoblox.nios_modules.nios_network:
         network: "{{ network4tocreate }}"
         comment: "This is an IPV4 test Network created by Ansible"
-        network_view: "{{ networkviewtocreate }}"
+        network_view: "{{ networkview }}"
         provider: "{{ nios_provider }}"
         state: present
 
-    - name: "Create an ipv6 network {{ network6tocreate }} under the networkview {{ networkviewtocreate }}"
+    - name: "Create an ipv6 network {{ network6tocreate }} under the networkview {{ networkview }}"
       infoblox.nios_modules.nios_network:
         network: "{{ network6tocreate }}"
         comment: "This is an IPV6 test Network created by Ansible"
-        network_view: "{{ networkviewtocreate }}"
+        network_view: "{{ networkview }}"
         provider: "{{ nios_provider }}"
         state: present
