--- a/01_infoblox_network_views.yml
+++ b/01_infoblox_network_views.yml
@@ -5,8 +5,12 @@
   gather_facts: yes
   vars: 
     networkviewtocreate: The-Rick-James-Network
-  vars_files:
-    - nios_vars.yml
+    nios_provider:
+      host: "{{ nios_grid_ip }}"
+      username: "{{ nios_username }}"
+      password: "{{ nios_password }}"
+    # vars_files:
+    #- nios_vars.yml
 
   tasks: 
 
