--- a/01_infoblox_network_views.yml
+++ b/01_infoblox_network_views.yml
@@ -1,6 +1,7 @@
 ---
 - name: A playbook to create a network view in Infoblox / NIOS
-  hosts: localhost
+  # hosts: localhost
+  hosts: all
   connection: local
   gather_facts: yes
   vars: 
